# NewBatteryDashBoard

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  run.py
battery_dashboard/: config.py  main.py
battery_dashboard/core/: data_manager.py  exceptions.py  plot_config.py  settings.py  state_manager.py
battery_dashboard/data/: __init__.py  cache.py  loaders.py  processors.py  validators.py
battery_dashboard/ui/: base_tab.py
battery_dashboard/ui/components/: cell_selector.py  cycle_plots.py
battery_dashboard/utils/: decorators.py  helpers.py  logging.py
