# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-analytics-dashboard"
version = "2.0.0"
description = "Advanced battery analytics dashboard with ML integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Battery Analytics Team", email = "analytics@example.com"}
]
keywords = ["battery", "analytics", "dashboard", "machine-learning", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "panel>=1.3.0",
    "param>=2.0.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "holoviews>=1.18.0",
    "hvplot>=0.9.0",
    "bokeh>=3.3.0",
    "plotly>=5.17.0",
    "mlflow>=2.8.0",
    "joblib>=1.3.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
deploy = [
    "gunicorn>=21.0.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/battery-analytics-dashboard"
Documentation = "https://battery-analytics-dashboard.readthedocs.io/"
Repository = "https://github.com/yourorg/battery-analytics-dashboard.git"
Issues = "https://github.com/yourorg/battery-analytics-dashboard/issues"

[project.scripts]
battery-dashboard = "battery_dashboard.main:create_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["battery_dashboard*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "panel.*",
    "holoviews.*",
    "hvplot.*",
    "bokeh.*",
    "mlflow.*",
    "polars.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"




